--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-
 <html lang="en">
-<head><link href="main.css" rel="stylesheet"/>
-<meta charset="utf-8"/>
-<title>WattSun Solar - Home</title>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<link href="main.css" rel="stylesheet"/>
-<style>
+<head>
+  <meta charset="utf-8"/>
+  <title>WattSun Solar - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="main.css" rel="stylesheet"/>
+  <link href="main.css" rel="stylesheet"/>
+
+  <style>
     .cta {
       display: flex;
       flex-direction: column;
@@ -47,271 +48,334 @@
     h2, .centered-section-title {
       margin-top: 0;
     }
-  
-/* === Mobile Enhancements === */
-.mobile-nav {
-  display: none;
-}
-@media (max-width: 768px) {
-  header {
-    height: 56px;
-  }
 
-  .mobile-nav {
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    height: 56px;
-    width: 100%;
-    background-color: #f4a940;
-    justify-content: space-around;
-    align-items: center;
-    z-index: 1000;
-    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
-  }
+    /* === Mobile Enhancements === */
+    .mobile-nav {
+      display: none;
+    }
+    @media (max-width: 768px) {
+      header {
+        height: 56px;
+      }
 
-  .mobile-nav a {
-    font-size: 24px;
-    text-decoration: none;
-    color: black;
-    position: relative;
-    line-height: 1;
-  }
+      .mobile-nav {
+        display: flex;
+        position: fixed;
+        bottom: 0;
+        height: 56px;
+        width: 100%;
+        background-color: #f4a940;
+        justify-content: space-around;
+        align-items: center;
+        z-index: 1000;
+        box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+      }
 
-  #cart-count {
-    background: red;
-    color: white;
-    border-radius: 50%;
-    padding: 2px 6px;
-    font-size: 12px;
-    position: absolute;
-    top: -8px;
-    right: -12px;
-  }
-}
+      .mobile-nav a {
+        font-size: 24px;
+        text-decoration: none;
+        color: black;
+        position: relative;
+        line-height: 1;
+      }
 
-@media (max-width: 768px) {
-  .mobile-nav a {
-    font-size: 20px;
-    padding: 6px;
-  }
-}
+      #cart-count {
+        background: red;
+        color: white;
+        border-radius: 50%;
+        padding: 2px 6px;
+        font-size: 12px;
+        position: absolute;
+        top: -8px;
+        right: -12px;
+      }
+    }
 
-@media (max-width: 768px) {
-  .mobile-nav {
-    height: 56px;
-    padding: 0;
-  }
+    @media (max-width: 768px) {
+      .mobile-nav a {
+        font-size: 20px;
+        padding: 6px;
+      }
+    }
 
-  .mobile-nav a {
-    font-size: 20px;
-    height: 56px;
-    line-height: 56px;
-    padding: 0;
-    margin: 0;
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+    @media (max-width: 768px) {
+      .mobile-nav {
+        height: 56px;
+        padding: 0;
+      }
 
-  #cart-count {
-    top: 4px;
-    right: 10px;
-  }
-}
+      .mobile-nav a {
+        font-size: 20px;
+        height: 56px;
+        line-height: 56px;
+        padding: 0;
+        margin: 0;
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-@media (max-width: 768px) {
-  #cart-count {
-    position: absolute;
-    top: 6px;
-    right: 10px;
-    background: red;
-    color: white;
-    font-size: 11px;
-    min-width: 16px;
-    height: 16px;
-    border-radius: 8px;
-    padding: 0 5px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-</style>
+      #cart-count {
+        top: 4px;
+        right: 10px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      #cart-count {
+        position: absolute;
+        top: 6px;
+        right: 10px;
+        background: red;
+        color: white;
+        font-size: 11px;
+        min-width: 16px;
+        height: 16px;
+        border-radius: 8px;
+        padding: 0 5px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    @media (max-width: 768px) {
+      h1 img.site-logo {
+        width: auto !important;
+        max-height: 32px !important;
+        margin-right: 8px;
+      }
+    }
+
+    /* === Mobile Logo from Cart === */
+    .logo-container {
+      display: none;
+    }
+    .desktop-logo {
+      display: block;
+    }
+    .brand-name {
+      font-size: 1.8em;
+      font-weight: bold;
+      color: white;
+      white-space: nowrap;
+    }
+    .site-logo {
+      height: 48px;
+      max-width: 48px;
+      object-fit: contain;
+      vertical-align: middle;
+    }
+    @media (max-width: 768px) {
+      .desktop-logo {
+        display: none;
+      }
+      .logo-container {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        white-space: nowrap;
+        padding: 4px 12px;
+        height: 56px;
+        margin-left: 10px;
+      }
+      .site-logo {
+        height: auto;
+        max-height: 36px;
+        object-fit: contain;
+      }
+      .brand-name {
+        font-size: 1.3em;
+      }
+    }
+  </style>
 </head>
 <body>
-<header>
-<div class="header-bar">
-<h1>WattSun Solar</h1>
-<button aria-label="Open menu" class="nav-toggle">☰</button>
-</div>
-<nav>
-<a href="index.html">Home</a>
-<a href="solutions.html">Solutions</a>
-<a href="shop.html">Shop</a>
-<a href="financing.html">Financing</a>
-<a href="projects.html">Projects</a>
-<a href="contact.html">Contact</a>
-<!--<a href="cart.html">🛒 Cart</a>-->
-</nav>
-</header>
-<div class="hero">
-<div class="hero-inner">
-<h1>Powering Kenya with Clean, Reliable Solar Energy</h1>
-<p>Affordable solar solutions for homes, businesses, and off-grid communities across Kenya.</p>
-<p>WattSun Solar is dedicated to empowering communities through clean, renewable energy. We provide tailored solar installations, financing solutions, and after-sales support nationwide.</p>
-<a class="loan-btn" href="solutions.html">Explore Solutions</a>
-</div>
-</div>
-<section>
-<h2 class="centered-section-title">Why Choose WattSun?</h2>
-<div class="feature-row">
-<div class="feature-box">
-<div class="feature-icon">☀️</div>
-<div>
-<div class="feature-title">100% Solar-Driven</div>
-<div class="feature-desc">Clean energy for homes, farms, and businesses.</div>
-</div>
-</div>
-<div class="feature-box">
-<div class="feature-icon">💰</div>
-<div>
-<div class="feature-title">Flexible Financing</div>
-<div class="feature-desc">From just 50% deposit. Up to 36 months repayment.</div>
-</div>
-</div>
-<div class="feature-box">
-<div class="feature-icon">🛠️</div>
-<div>
-<div class="feature-title">Pro Installers</div>
-<div class="feature-desc">Available across Nairobi, Kisumu, Eldoret, Naivasha.</div>
-</div>
-</div>
-<div class="feature-box">
-<div class="feature-icon">🔧</div>
-<div>
-<div class="feature-title">After-Sales Support</div>
-<div class="feature-desc">We maintain, clean, and upgrade your system.</div>
-</div>
-</div>
-</div>
-</section>
-<section>
-<h2 style="text-align:center;">Success Stories</h2>
-<div class="testimonials-list">
-<div class="testimonial-row">
-<img alt="Family Home – Karen" class="testimonial-img" src="images/family-home-karen.jpg"/>
-<div class="testimonial-text">
-<p><strong> Family Home – Karen</strong>: 3kW rooftop + battery backup.</p>
-</div>
-</div>
-<div class="testimonial-row">
-<img alt="Nairobi Factory" class="testimonial-img" src="images/nairobi-factory.jpg"/>
-<div class="testimonial-text">
-<p><strong> Nairobi Factory</strong>: 9kW hybrid inverter system for full-time operations.</p>
-</div>
-</div>
-<div class="testimonial-row">
-<img alt="Off-Grid Lodge – Naivasha" class="testimonial-img" src="images/offgrid-lodge-naivasha.jpg"/>
-<div class="testimonial-text">
-<p><strong> Off-Grid Lodge – Naivasha</strong>: Complete off-grid system with storage.</p>
-</div>
-</div>
-</div>
-</section>
-<section>
-<h2 class="centered-section-title">How It Works</h2>
-<div class="steps-row">
-<div class="step-box">
-<div class="step-title">1. Choose a System</div>
-<div class="step-desc">Select the right package from our shop.</div>
-</div>
-<div class="step-box">
-<div class="step-title">2. Apply for Financing</div>
-<div class="step-desc">Pay your deposit and spread the balance.</div>
-</div>
-<div class="step-box">
-<div class="step-title">3. We Install</div>
-<div class="step-desc">Certified technicians handle the setup.</div>
-</div>
-<div class="step-box">
-<div class="step-title">4. Start Saving!</div>
-<div class="step-desc">Enjoy clean, uninterrupted solar power.</div>
-</div>
-</div>
-</section>
-<section class="cta">
-<h2>Ready to go solar?</h2>
-<p>Estimate your loan &amp; start saving today!</p>
-<a class="loan-btn" href="financing.html">Estimate My Loan</a>
-</section>
-<footer>
-<div class="footer-contacts">
-<a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
-</div>
-<p>© 2025 WattSun Solar. All rights reserved.</p>
-</footer>
-<footer class="mobile-nav">
-<a aria-label="Home" href="index.html">🏠</a>
-<a aria-label="Account" href="account.html">👤</a>
-<a aria-label="Cart" href="cart.html">🛒<span id="cart-count">0</span></a>
-<a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('.nav-toggle').click();">☰</a>
-</footer>
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-  const navToggle = document.querySelector('.nav-toggle');
-  const header = document.querySelector('header');
-  const nav = header.querySelector('nav');
+  <header>
+    <div class="header-bar">
+      <h1 class="desktop-logo">
+        <img src="assets/logo/Wattsun Solar log2.png" alt="WattSun Solar Logo" style="width: 60px; object-fit: contain; margin-right: 10px;">
+        WattSun Solar
+      </h1>
+      <div class="logo-container">
+        <img src="assets/logo/Wattsun Solar log2.png" alt="WattSun Solar Logo" class="site-logo"/>
+        <span class="brand-name">WattSun Solar</span>
+      </div>
+      <button aria-label="Open menu" class="nav-toggle">☰</button>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="solutions.html">Solutions</a>
+      <a href="shop.html">Shop</a>
+      <a href="financing.html">Financing</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+      <!--<a href="cart.html">🛒 Cart</a>-->
+    </nav>
+  </header>
 
-  if (navToggle && header) {
-    navToggle.addEventListener('click', function (e) {
-      e.stopPropagation();
-      header.classList.toggle('nav-open');
+  <div class="hero">
+    <div class="hero-inner">
+      <h1>Powering Kenya with Clean, Reliable Solar Energy</h1>
+      <p>Affordable solar solutions for homes, businesses, and off-grid communities across Kenya.</p>
+      <p>WattSun Solar is dedicated to empowering communities through clean, renewable energy. We provide tailored solar installations, financing solutions, and after-sales support nationwide.</p>
+      <a class="loan-btn" href="solutions.html">Explore Solutions</a>
+    </div>
+  </div>
+
+  <section>
+    <h2 class="centered-section-title">Why Choose WattSun?</h2>
+    <div class="feature-row">
+      <div class="feature-box">
+        <div class="feature-icon">☀️</div>
+        <div>
+          <div class="feature-title">100% Solar-Driven</div>
+          <div class="feature-desc">Clean energy for homes, farms, and businesses.</div>
+        </div>
+      </div>
+      <div class="feature-box">
+        <div class="feature-icon">💰</div>
+        <div>
+          <div class="feature-title">Flexible Financing</div>
+          <div class="feature-desc">From just 50% deposit. Up to 36 months repayment.</div>
+        </div>
+      </div>
+      <div class="feature-box">
+        <div class="feature-icon">🛠️</div>
+        <div>
+          <div class="feature-title">Pro Installers</div>
+          <div class="feature-desc">Available across Nairobi, Kisumu, Eldoret, Naivasha.</div>
+        </div>
+      </div>
+      <div class="feature-box">
+        <div class="feature-icon">🔧</div>
+        <div>
+          <div class="feature-title">After-Sales Support</div>
+          <div class="feature-desc">We maintain, clean, and upgrade your system.</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2 style="text-align:center;">Success Stories</h2>
+    <div class="testimonials-list">
+      <div class="testimonial-row">
+        <img src="images/family-home-karen.jpg" alt="Family Home – Karen" class="testimonial-img"/>
+        <div class="testimonial-text">
+          <p><strong>Family Home – Karen</strong>: 3kW rooftop + battery backup.</p>
+        </div>
+      </div>
+      <div class="testimonial-row">
+        <img src="images/nairobi-factory.jpg" alt="Nairobi Factory" class="testimonial-img"/>
+        <div class="testimonial-text">
+          <p><strong>Nairobi Factory</strong>: 9kW hybrid inverter system for full-time operations.</p>
+        </div>
+      </div>
+      <div class="testimonial-row">
+        <img src="images/offgrid-lodge-naivasha.jpg" alt="Off-Grid Lodge – Naivasha" class="testimonial-img"/>
+        <div class="testimonial-text">
+          <p><strong>Off-Grid Lodge – Naivasha</strong>: Complete off-grid system with storage.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2 class="centered-section-title">How It Works</h2>
+    <div class="steps-row">
+      <div class="step-box">
+        <div class="step-title">1. Choose a System</div>
+        <div class="step-desc">Select the right package from our shop.</div>
+      </div>
+      <div class="step-box">
+        <div class="step-title">2. Apply for Financing</div>
+        <div class="step-desc">Pay your deposit and spread the balance.</div>
+      </div>
+      <div class="step-box">
+        <div class="step-title">3. We Install</div>
+        <div class="step-desc">Certified technicians handle the setup.</div>
+      </div>
+      <div class="step-box">
+        <div class="step-title">4. Start Saving!</div>
+        <div class="step-desc">Enjoy clean, uninterrupted solar power.</div>
+      </div>
+    </div>
+  </section>
+
+  <section class="cta">
+    <h2>Ready to go solar?</h2>
+    <p>Estimate your loan &amp; start saving today!</p>
+    <a class="loan-btn" href="financing.html">Estimate My Loan</a>
+  </section>
+
+  <footer>
+    <div class="footer-contacts">
+      <a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+    </div>
+    <p>© 2025 WattSun Solar. All rights reserved.</p>
+  </footer>
+
+  <footer class="mobile-nav">
+    <a aria-label="Home" href="index.html">🏠</a>
+    <a aria-label="Account" href="account.html">👤</a>
+    <a aria-label="Cart" href="cart.html">🛒<span id="cart-count">0</span></a>
+    <a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('.nav-toggle').click();">☰</a>
+  </footer>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const navToggle = document.querySelector('.nav-toggle');
+      const header = document.querySelector('header');
+      const nav = header.querySelector('nav');
+
+      if (navToggle && header) {
+        navToggle.addEventListener('click', function (e) {
+          e.stopPropagation();
+          header.classList.toggle('nav-open');
+        });
+      }
+
+      document.querySelectorAll('header nav a').forEach(link => {
+        link.addEventListener('click', () => header.classList.remove('nav-open'));
+      });
+
+      document.body.addEventListener('click', function (e) {
+        if (
+          header.classList.contains('nav-open') &&
+          !nav.contains(e.target) &&
+          !navToggle.contains(e.target)
+        ) {
+          header.classList.remove('nav-open');
+        }
+      }, true);
     });
-  }
 
-  document.querySelectorAll('header nav a').forEach(link => {
-    link.addEventListener('click', () => header.classList.remove('nav-open'));
-  });
+    function updateCartCountBadge() {
+      let count = 0;
+      try {
+        const cart = JSON.parse(localStorage.getItem("cart")) || [];
+        count = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
+      } catch (e) {}
 
-  document.body.addEventListener('click', function (e) {
-    if (
-      header.classList.contains('nav-open') &&
-      !nav.contains(e.target) &&
-      !navToggle.contains(e.target)
-    ) {
-      header.classList.remove('nav-open');
+      const badge = document.getElementById('cart-count-badge');
+      const mobileCount = document.getElementById('cart-count');
+      if (badge) {
+        if (count > 0) {
+          badge.textContent = count;
+          badge.style.display = 'flex';
+        } else {
+          badge.style.display = 'none';
+        }
+      }
+      if (mobileCount) {
+        mobileCount.textContent = count;
+      }
     }
-  }, true);
-});
-</script>
-
-<script>
-function updateCartCountBadge() {
-  let count = 0;
-  try {
-    const cart = JSON.parse(localStorage.getItem("cart")) || [];
-    count = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
-  } catch (e) {}
-
-  const badge = document.getElementById('cart-count-badge');
-  const mobileCount = document.getElementById('cart-count');
-  if (badge) {
-    if (count > 0) {
-      badge.textContent = count;
-      badge.style.display = 'flex';
-    } else {
-      badge.style.display = 'none';
-    }
-  }
-  if (mobileCount) {
-    mobileCount.textContent = count;
-  }
-}
-document.addEventListener('DOMContentLoaded', updateCartCountBadge);
-window.addEventListener('storage', updateCartCountBadge);
-</script>
+    document.addEventListener('DOMContentLoaded', updateCartCountBadge);
+    window.addEventListener('storage', updateCartCountBadge);
+  </script>
 </body>
 </html>
