--- a/account.html
+++ b/account.html
@@ -1,13 +1,13 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Account - WattSun Solar</title>
-  <link rel="stylesheet" href="main.css" />
-  <style>
-    body {
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>My Account - WattSun Solar</title>
+<link href="main.css" rel="stylesheet"/>
+<style>body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding-bottom: 56px;
@@ -136,44 +136,99 @@
         justify-content: center;
       }
     }
-  </style>
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  white-space: nowrap;
+  padding: 6px 12px;
+  margin-left: 10px;
+}
+.brand-name {
+  font-size: 1.8em;
+  font-weight: bold;
+  color: white;
+  white-space: nowrap;
+}
+.site-logo {
+  height: 48px;
+  max-width: 48px;
+  object-fit: contain;
+  vertical-align: middle;
+}
+@media (max-width: 768px) {
+  .logo-container {
+    padding: 4px 12px;
+    height: 56px;
+  }
+  .site-logo {
+    height: auto;
+    max-height: 36px;
+    object-fit: contain;
+  }
+  .brand-name {
+    font-size: 1.3em;
+  }
+}
+    /* === Desktop & Mobile Logo Styles from index.html === */
+    .logo-container { display: none; }
+    .desktop-logo { display: block; }
+    .brand-name { font-size: 1.8em; font-weight: bold; color: white; white-space: nowrap; }
+    .site-logo { height: 48px; max-width: 48px; object-fit: contain; vertical-align: middle; }
+    @media (max-width: 768px) {
+      .desktop-logo { display: none; }
+      .logo-container { display: flex; align-items: center; gap: 12px; white-space: nowrap; padding: 4px 12px; height: 56px; margin-left: 10px; }
+      .site-logo { height: auto; max-height: 36px; object-fit: contain; }
+      .brand-name { font-size: 1.3em; }
+    }
+    @media (max-width: 768px) {
+      h1 img.site-logo { width: auto !important; max-height: 32px !important; margin-right: 8px; }
+    }
+</style>
 </head>
 <body>
 <header>
-  <div class="header-bar">
-    <h1>WattSun Solar</h1>
-    <button class="nav-toggle" aria-label="Toggle Menu" onclick="document.querySelector('nav').classList.toggle('nav-open')">☰</button>
-  </div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="shop.html">Shop</a>
-    <a href="calculator.html">Calculator</a>
-    <a href="financing.html">Financing</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+<div class="header-bar">
+      <h1 class="desktop-logo">
+        <img src="assets/logo/Wattsun Solar log2.png" alt="WattSun Solar Logo" style="width: 60px; object-fit: contain; margin-right: 10px;">
+        WattSun Solar
+      </h1>
+      <div class="logo-container">
+        <img src="assets/logo/Wattsun Solar log2.png" alt="WattSun Solar Logo" class="site-logo"/>
+        <span class="brand-name">WattSun Solar</span>
+      </div>
+
+
+
+
+<button aria-label="Toggle Menu" class="nav-toggle" onclick="document.querySelector('nav').classList.toggle('nav-open')">☰</button>
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="shop.html">Shop</a>
+<a href="calculator.html">Calculator</a>
+<a href="financing.html">Financing</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+</nav>
 </header>
-
 <div class="account-section">
-  <h2>Track Your Order or Financing</h2>
-  <p>Enter your phone number to view your status:</p>
-  <input type="tel" placeholder="+254 7XX XXX XXX" />
-  <button>Check Status</button>
+<h2>Track Your Order or Financing</h2>
+<p>Enter your phone number to view your status:</p>
+<input placeholder="+254 7XX XXX XXX" type="tel"/>
+<button>Check Status</button>
 </div>
-
 <div class="account-section">
-  <h2>Need Help?</h2>
-  <p><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></p>
-  <p><a href="contact.html">Contact Page</a> | <a href="faq.html">FAQ</a></p>
+<h2>Need Help?</h2>
+<p><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></p>
+<p><a href="contact.html">Contact Page</a> | <a href="faq.html">FAQ</a></p>
 </div>
-
 <footer class="mobile-nav">
-  <a href="index.html" aria-label="Home">🏠</a>
-  <a href="account.html" aria-label="Account">👤</a>
-  <a href="cart.html" aria-label="Cart">🛒<span id="cart-count">0</span></a>
-  <a href="javascript:void(0);" aria-label="Menu" onclick="document.querySelector('nav').classList.toggle('nav-open')">☰</a>
+<a aria-label="Home" href="index.html">🏠</a>
+<a aria-label="Account" href="account.html">👤</a>
+<a aria-label="Cart" href="cart.html">🛒<span id="cart-count">0</span></a>
+<a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('nav').classList.toggle('nav-open')">☰</a>
 </footer>
-
 <script>
 function updateCartCountBadge() {
   let count = 0;
