--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
 <meta content="width=device-width, initial-scale=1" name="viewport"/><meta charset="utf-8"/>
 <title>Contact Us | WattSun Solar</title>
 <link href="main.css" rel="stylesheet"/>
-<style>
-    body { background: #FFFAF0; }
+<style>body { background: #FFFAF0; }
     section { max-width: 950px; margin: 42px auto 0 auto; padding: 0 16px; }
     .contact-container {
       display: flex;
@@ -445,7 +444,55 @@ nav a:focus {
   color: #00a651;
   font-weight: bold;
 }
-    </style>
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  white-space: nowrap;
+  padding: 6px 12px;
+  margin-left: 10px;
+}
+.brand-name {
+  font-size: 1.8em;
+  font-weight: bold;
+  color: white;
+  white-space: nowrap;
+}
+.site-logo {
+  height: 48px;
+  max-width: 48px;
+  object-fit: contain;
+  vertical-align: middle;
+}
+@media (max-width: 768px) {
+  .logo-container {
+    padding: 4px 12px;
+    height: 56px;
+  }
+  .site-logo {
+    height: auto;
+    max-height: 36px;
+    object-fit: contain;
+  }
+  .brand-name {
+    font-size: 1.3em;
+  }
+}
+    /* === Desktop & Mobile Logo Styles from index.html === */
+    .logo-container { display: none; }
+    .desktop-logo { display: block; }
+    .brand-name { font-size: 1.8em; font-weight: bold; color: white; white-space: nowrap; }
+    .site-logo { height: 48px; max-width: 48px; object-fit: contain; vertical-align: middle; }
+    @media (max-width: 768px) {
+      .desktop-logo { display: none; }
+      .logo-container { display: flex; align-items: center; gap: 12px; white-space: nowrap; padding: 4px 12px; height: 56px; margin-left: 10px; }
+      .site-logo { height: auto; max-height: 36px; object-fit: contain; }
+      .brand-name { font-size: 1.3em; }
+    }
+    @media (max-width: 768px) {
+      h1 img.site-logo { width: auto !important; max-height: 32px !important; margin-right: 8px; }
+    }
+</style>
 <style>
 /* Fully responsive and rounded input rows */
 .contact-form input,
@@ -550,7 +597,18 @@ nav a:focus {
 <!-- Header: Unchanged -->
 <header>
 <div class="header-bar">
-<h1>WattSun Solar</h1>
+      <h1 class="desktop-logo">
+        <img src="assets/logo/Wattsun Solar log2.png" alt="WattSun Solar Logo" style="width: 60px; object-fit: contain; margin-right: 10px;">
+        WattSun Solar
+      </h1>
+      <div class="logo-container">
+        <img src="assets/logo/Wattsun Solar log2.png" alt="WattSun Solar Logo" class="site-logo"/>
+        <span class="brand-name">WattSun Solar</span>
+      </div>
+
+
+
+
 <button aria-label="Open menu" class="nav-toggle">☰</button>
 </div>
 <nav>
