--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
       <a href="index.html">Home</a>
       <a href="solutions.html">Solutions</a>
       <a href="shop.html">Shop</a>
+        <a href="calculators/calculator.html">Calculator</a>
       <a href="financing.html">Financing</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
