--- a/solutions.html
+++ b/solutions.html
@@ -469,7 +469,7 @@ nav a:focus {
 </nav>
 </header>
 <div class="solutions-calc-cta">
-<a class="loan-btn" href="calculator.html">
+<a class="loan-btn" href="calculators/calculator.html">
     Try our Solar Kit Calculator
   </a>
 <div class="calc-desc">
